--- a/weeklyroutines/privacy.html
+++ b/weeklyroutines/privacy.html
@@ -1,11 +1,11 @@
 <html lang="en-US">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"></meta>
-<title>Privacy Policy for the <span class="app-name"></span> Mobile app </title>
+<title>Privacy Policy for the Weekly Routines Mobile app </title>
 
       <!-- Section-0P -->
       <div id="mod-0p">
         <h1>
-          Privacy Policy for the<br><span class="app-name" style="opacity: 1;">Weekly Routines</span> App
+          Privacy Policy for the <span class="app-name" style="opacity: 1;">Weekly Routines</span> App
         </h1>
         <br>
         <p>
@@ -97,21 +97,12 @@
       
 
       <!-- Section-8P -->
-      <div id="sec-title-8P">
-        <br>
-        <h2 id="children_personal_information">
-          <span class="num">6</span>. Children's Personal Information
-        </h2>
-        <div id="mod-8p-content">
-    Users of <span class="app-name" style="opacity: 1;">Weekly Routines</span> must be at least 13 years old. We do not knowingly collect personal information from children. If we learn that we have collected personal information from a child, we will take all reasonable steps to delete it as soon as possible. If you become aware that a child has provided personal information to us, please contact us at the contact information <a href="#contact_us">below</a>.
-    </div>
-      </div>
 
       <!-- Section-9P -->
       <div id="mod-9p-title">
         <br>
         <h2 id="personal_information_retention">
-          <span class="num">7</span>. How Long We Keep Your Personal Information
+          <span class="num">6</span>. How Long We Keep Your Personal Information
         </h2>
         <div id="mod-9p-content">
   <p>We will keep the personal information that we collect as long as it is necessary for the purposes for which we collect it.</p>
@@ -122,7 +113,7 @@
       <div id="sec-title-10P">
         <br>
         <h2 id="personal_information_protection">
-          <span class="num">8</span>. How We Protect Your Personal Information
+          <span class="num">7</span>. How We Protect Your Personal Information
         </h2>
         <div id="mod-10p-content">
   <p>We use encryption to protect personal information stored and transmitted online. Only personnel who need the personal information to perform a specific function have access to such. The computers and servers on which we store personal information are kept in a secure environment.</p>
@@ -133,7 +124,7 @@
       <div id="sec-title-11P">
         <br>
         <h2 id="policy_changes">
-          <span class="num">9</span>. Policy Changes
+          <span class="num">8</span>. Policy Changes
         </h2>
         <div id="mod-11p-content">
   <p>When we make material changes to this privacy policy, for example, due to app updates or changes in the law, we will post the updated policy here. The policy will always apply in the version at the time of your use of <span class="app-name" style="opacity: 1;">Weekly Routines</span> even if you downloaded <span class="app-name" style="opacity: 1;">Weekly Routines</span> at a time when a previous policy version was applicable.</p>
@@ -144,7 +135,7 @@
       <div id="sec-title-12P">
         <br>
         <h2 id="accessibility">
-          <span class="num">10</span>. Accessibility
+          <span class="num">9</span>. Accessibility
         </h2>
         <div id="mod-12p-content">
   <p>This website conforms to the <a href="https://www.w3.org/TR/WCAG20/" target="_blank">Web Content Accessibility Guidelines (WCAG) 2.0</a>. However, if you are having difficulties obtaining information from it, please contact us at the contact information <a href="#contact_us">below</a>. We will try to make the information available to you in another format and answer any question that you may have.</p>
@@ -155,11 +146,11 @@
       <div id="sec-title-13P" class="extra-margin-bottom">
         <br>
         <h2 id="contact_us">
-          <span class="num">11</span>. Contact Us
+          <span class="num">10</span>. Contact Us
         </h2>
         <p>Please contact us if you have any questions or concerns.</p>
         <div id="mod-13p-name"><p>Joakim Back</p></div>
-        <div id="mod-13p-email"><p>joakim.back@me.com</p></div>
+        <div id="mod-13p-email"><p>support@joakimback.se</p></div>
       </div>
 
     <small>This privacy policy was generated with <a href="https://github.com/privacy-tech-lab/privacyflash-pro" target="_blank">PrivacyFlash Pro</a></small>
