--- a/homesmart_callbacktest.html
+++ b/homesmart_callbacktest.html
@@ -2,11 +2,11 @@
     <head></head>
     <script>
         function redirect() {
-            window.location.assign("ihs2://energy/signedPoA")
+            window.location.assign("ihs2://energy/dismissPoAWebFlow")
         }
     </script>
     <body style="font-size: large;">
-        <a href="ihs2://energy/signedPoA">Test Anchor Link</a><br>
+        <a href="ihs2://energy/dismissPoAWebFlow">Test Anchor Link</a><br>
         <br>
         <a href="#" onclick="redirect()">Test Window Location</a>
     </body>
